--- a/网页练习.html
+++ b/网页练习.html
@@ -18,4 +18,44 @@
                 </div>
                 <div style="float: left; width: 50%; height: 301.09px; display: table;" >
                     <div style="width: 380px; display: table-cell;vertical-align: middle;">
-                        <p > <strong>1.Post  Task
+                        <p > <strong>1.Post  Tasks  </strong></p >
+                        <p >Clients can Tasks based on yourregion,file type etc the system will find suitable minders for you </p >
+                    </div>
+                </div>
+            </div>
+            <div style="overflow: hidden;">
+                <div style="float: right; width: 50%">
+                    < img src="./1.svg" width="386.81px" height="301.09px" >
+                </div>
+                <div style="float: right;width: 50%; height: 301.09px; display: table;">
+                    <div style="width: 380px; display: table-cell;vertical-align: middle;">
+                        <p><strong>2. Bid For Tasks</strong></p >
+                        <p>All miners can bid for the tasks and the task creators decide which miners will be selected according to the minersˊbids </p >    
+                    </div>
+                </div>
+            </div>
+            <div style="overflow: hidden;">
+                <div style="float: left; width: 50%">
+                    < img src="./1.svg" width="386.81px" height="301.09px" >
+                </div>
+                <div style="float: left; width: 50%; height: 301.09px; display: table;">
+                    <div style="width: 380px; display: table-cell;vertical-align: middle;">
+                        <p><strong>3.Confirm Completiom</strong></p >
+                        <p> Client can confirm when the tasks are completed Ensure the authenticity of task completion</p >
+                    </div>
+                </div>
+            </div>
+            <div style="overflow: hidden;">
+                <div style="float: right; width: 50%">
+                    < img src="./1.svg" width="386.81px" height="301.09px" >
+                </div>
+                <div style="float: right;width: 50%; display: table;">
+                    <div style="width: 380px; display: table-cell;vertical-align: middle;">
+                        <p><strong>4.Evaluste</strong></p >
+                        <p>After the completion of the task the task creator and the minter can evaluate each other and the system will caiculate the score of the cilent and the miner respectively based on the eva luation</p >
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
+</html>
